completed forBot flag in annotation processors

--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,12 @@ configurations {
 }
 
 repositories {
+//	maven {
+//		name 'm2-dv8tion'
+//		url 'https://m2.dv8tion.net/releases'
+//	}
 	mavenCentral()
 }
-
 dependencies {
 	implementation fileTree(dir: 'libs', include: '*.jar')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
