--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.main.web-application-type=none
-spring.datasource.url=jdbc:postgresql://url
+spring.datasource.url=jdbc:postgresql://NONO
 spring.datasource.username=postgres
-spring.datasource.password=pass
+spring.datasource.password=NO
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
-cobalt.token=discord-bot-token
+cobalt.token=NO
