--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,27 @@
-plugins {
-	id 'java'
+subprojects {
+	apply plugin: 'java'
+	apply plugin: 'maven-publish'
+
+
+	sourceCompatibility = '17'
+	targetCompatibility = '17'
+
+
+	group = 'me.nort3x.b4j'
+	version = '0.0.1-SNAPSHOT'
+
+	task sourcesJar(type: Jar, dependsOn: classes) {
+		classifier = 'sources'
+		from sourceSets.main.allSource
+	}
+
+	task javadocJar(type: Jar, dependsOn: javadoc) {
+		classifier = 'javadoc'
+		from javadoc.destinationDir
+	}
+
+	artifacts {
+		archives sourcesJar
+		archives javadocJar
+	}
 }
-
-group = 'me.nort3x.b4j'
-version = '0.0.1-SNAPSHOT'
-
-sourceCompatibility = '17'
-targetCompatibility = '17'
