added publishToMavenLocal removed extra example build issue

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -3,6 +3,12 @@ plugins {
 }
 
 
+sourceCompatibility = '11'
+targetCompatibility = '11'
+
+group = 'me.nort3x.b4j'
+version = '0.0.1-SNAPSHOT'
+
 repositories {
     mavenCentral()
 }
