--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,10 +1,16 @@
 plugins {
     id 'org.springframework.boot' version '2.5.6'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
+    id 'java-library'
+    id 'maven-publish'
 }
 
 
+sourceCompatibility = '11'
+targetCompatibility = '11'
+
+group = 'me.nort3x.b4j'
+version = '0.0.1-SNAPSHOT'
 
 configurations {
     compileOnly {
@@ -30,4 +36,14 @@ bootJar {
 
 jar {
     enabled = true
+}
+
+
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
 }
