--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    id 'org.springframework.boot' version '2.5.6'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java-library'
     id 'maven-publish'
@@ -30,15 +29,10 @@ dependencies {
 test {
     useJUnitPlatform()
 }
-bootJar {
-    enabled = false
+java {
+    withJavadocJar()
+    withSourcesJar()
 }
-
-jar {
-    enabled = true
-}
-
-
 
 publishing {
     publications {
