--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '2.5.6'
     id 'java-library'
     id 'maven-publish'
 }
@@ -22,7 +23,8 @@ repositories {
 }
 dependencies {
     implementation group: 'net.dv8tion', name: 'JDA', version: '5.0.0-alpha.1'
-    implementation 'org.springframework.boot:spring-boot-starter:2.5.6'
+    compileOnly 'org.springframework.boot:spring-boot-starter'
+    compileOnly 'org.springframework.boot:spring-boot-starter-aop'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
