--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '2.5.6'
     id 'java'
 }
 
@@ -16,7 +18,11 @@ repositories {
 dependencies {
     implementation project(':core')
     implementation group: 'net.dv8tion', name: 'JDA', version: '5.0.0-alpha.1'
-    implementation 'org.springframework.boot:spring-boot-starter:2.5.6'
+
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
