--- a/example/build.gradle
+++ b/example/build.gradle
@@ -10,7 +10,7 @@ targetCompatibility = '11'
 
 group = 'me.nort3x.b4j'
 version = '0.0.1-SNAPSHOT'
-
+springBoot.mainClassName = "me.nort3x.b4j.example.aop.Runner"
 repositories {
     mavenCentral()
 }
